--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "jcoder": "c"
+    "jcoder": "coder-run/index.js"
   },
   "repository": {
     "type": "git",
