--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "scripts for coder only",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gen": "jcoder gen"
   },
   "bin": {
     "jcoder": "coder-run/index.js"
@@ -28,12 +29,15 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^11.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "inquirer": "^8.2.4",
     "mini-css-extract-plugin": "^2.7.2",
     "minimist": "^1.2.7",
     "prettier": "^2.8.3",
     "proptypes-generator": "0.0.14",
     "shelljs": "^0.8.5",
     "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   },
   "devDependencies": {}
