--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@jd/coder-scripts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "scripts for coder only",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gen": "jcoder gen",
-    "start": "../../../coder-pack/bin/run-scripts.js start --entry=src/index"
+    "patch": "npm version patch -m 'Update Version patch by NPM' | xargs git push origin && git push",
+    "prepublish": "npm run patch"
   },
   "bin": {
     "jcoder": "coder-run/bin/run-scripts.js"
