--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@jd/coder-scripts",
   "version": "1.0.7",
   "description": "scripts for coder only",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "patch": "npm version patch -m 'Update Version patch by NPM' | xargs git push origin && git push",
@@ -25,6 +24,7 @@
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
+    "axios": "^1.3.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -74,6 +74,7 @@
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
+    "webpack-merge": "^5.8.0",
     "workbox-webpack-plugin": "^6.4.1"
   },
   "devDependencies": {}
