--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jd/coder-scripts",
+  "name": "coder-scripts",
   "version": "1.0.10",
   "description": "scripts for coder only",
   "scripts": {
